res/css/style.css
:root {
	--body-coloring: linear-gradient(45deg, #cda2e8, #845491, #9468a1);
	--div-background-coloring: linear-gradient(70deg, #A677B9, #6f3abd);
	--text-coloring: linear-gradient(45deg, rgb(255, 234, 253), rgb(235, 251, 255));
	--text-shadowing: rgba(255, 211, 107, 0.123);
	--hr-coloring: linear-gradient(90deg, #00000000 30%, #fff 50%, #00000000 70%);
	--code-coloring: linear-gradient(45deg, rgb(211, 255, 196), rgb(147, 255, 129));
	--code-shadowing: #ffffff00;
	--link-coloring: linear-gradient(45deg, rgb(224, 195, 232), rgb(220, 181, 228));
	--link-highlight: linear-gradient(45deg, rgb(251, 237, 255), rgb(245, 193, 255));
	--link-shadowing: #f453ff22;
	--selection-coloring: #f14e8f;
	--selection-bg: #0000002f;
}

::selection {
	color: var(--selection-coloring);
	background-color: var(--selection-bg);
}

html {
	height: auto;
}

* {
	transition: all 0.3s ease;
}

body {
	font-family: monospace;
	font-size: 15px;
	background: var(--body-coloring);
	background-repeat: no-repeat;
	background-size: 100%;
	margin-top: 0px;
	height: auto;
}

body div div, h1, b, h2, h3, hr, p, ul, code, a {
	-webkit-background-clip: text;
	-moz-background-clip: text;
	-webkit-text-fill-color: transparent;
	-moz-text-fill-color: transparent;
	background-image: var(--text-coloring);
	background-size: 100%;
	background-clip: text;
	text-shadow: 2px 2px 4px var(--text-shadowing);
}

.maindiv {
	background-image: var(--div-background-coloring);
	background-size: 100%;
	border-bottom-left-radius: 15px;
	border-bottom-right-radius: 15px;
	margin-top: 0px;
	padding-bottom: 20px;
	overflow-y: auto;
	padding: 5px;
	height: 100%;
	width: auto;
	margin-left: 40px;
	margin-right: 40px;
	box-shadow: 0px 0px 25px #FCDEFD;
}

body div div {
	margin: 0 auto;
	margin-bottom: 10px;
	box-shadow: 0px 0px;
	border-radius: 0px;
}

hr {
	background: var(--hr-coloring);
	width: 100%;
	height: 1px;
	border: 0;
}

ul {
	list-style-type: none;
}

a {
	text-decoration: none;
}

a, a * {
	background-image: var(--link-coloring);
	text-shadow: 2px 2px 4px var(--link-shadowing);
}

a:hover, a *:hover {
	background-image: var(--link-highlight);
}

a img, a img:hover {
	background-image: none;
}

a img:hover {
	transform: scale(1.2);
}

code, code * {
	background-image: var(--code-coloring);
	text-shadow: 2px 2px 4px var(--code-shadowing);
}

.buttons, .image {
	display: flex;
	justify-content: center;
	align-items: center;
}

